--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sahyadri",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://sahyadri-backend.onrender.com/",
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.16.5",
