--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-flip-toolkit": "^7.1.0",
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
